Fixed spacing issues in navbar utils

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@
     display: flex;
     list-style-type: none;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     white-space: nowrap;
     font-family: 'futura';
     font-size: 17px;
@@ -86,11 +86,13 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 85px;
+    width: 4px;
+    padding-left:5px;
 }
 
 .nav-links>.nav-link>i {
     font-size: 20px;
+    padding-left:12px;
 }
 
 
@@ -238,6 +240,15 @@
     color: #1d1d1d;
     box-shadow: 0 0 3px lightgray;
     z-index: 20;
+    transition: 0.3s ease;
+}
+.btn-white:hover{
+    background-color: black;
+    color: white;
+}
+.btn-white{
+    text-decoration: none;
+    
 }
 
 .featured-box-1:hover img,
@@ -297,7 +308,7 @@
 }
 
 
-.product:hover .overlay-image {
+.product:hover .overlayImage {
     margin-top: 0px;
 }
 
@@ -332,7 +343,7 @@
     /* display: none; */
 }
 
-.overlay-image {
+.overlayImage {
     width: 100%;
     height: 100%;
     /* background-color: brown; */
@@ -670,37 +681,115 @@ input {
         font-size: 10px;
     }
 
-    .featured {
-        flex-direction: column;
-        row-gap: 5px;
-    }
+ 
+        .featured {
+            width: 100%;
+            padding: 10px 0px;
+            /* background-color: red; */
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .featured-box-1 {
+            width: 33%;
+            height: 570px;
+            /* background-color: green; */
+            position: relative;
+        }
+        
+        
+        .featured-box-2 {
+            width: 33%;
+            height: 570px;
+            /* background-color: purple; */
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        
+        }
+        
+        .featured-box-2-box-1 {
+            width: 100%;
+            height: 280px;
+            /* background-color: green; */
+            position: relative;
+        }
+        
+        .featured-box-2-box-2 {
+            width: 49.5%;
+            height: 280px;
+            /* background-color: green; */
+            position: relative
+        }
+        
+        .featured-box-2-box-3 {
+            width: 49.5%;
+            height: 280px;
+            /* background-color: green; */
+            position: relative;
+        }
+        
+        .featured-box-3 {
+            width: 33%;
+            height: 570px;
+            /* background-color: green; */
+            position: relative;
+        }
+        
+        .bg-image {
+            width: 100%;
+            height: 100%;
+            /* background-color: yellow; */
+            overflow: hidden;
+        
+        }
+        
+        .bg-image>img {
+            width: 100%;
+            transition: .2s;
+        }
+        
+        .featured-box-1:hover img,
+        .featured-box-3:hover img {
+            transform: scale(1.1);
+        }
+        
+        .overlay {
+            width: 100%;
+            height: 100%;
+         background-color: green; 
+            position: absolute;
+            display: flex;
+            padding: 5%;
+            align-items: flex-end;
+            justify-content: center;
+        }
+        
+        .btn-other {
+            background-color: white;
+            border: 1px solid white;
+            color: #1d1d1d;
+            box-shadow: 0 0 3px lightgray;
+            z-index: 20;
+            transition: 0.3s ease;
+        }
+        .btn-other:hover{
+            background-color: black;
+            color: white;
+        }
+        .btn-other{
+            text-decoration: none;
+            
+        }
+        
+        .featured-box-1:hover img,
+        .featured-box-3:hover img,
+        .featured-box-2-box-1:hover img,
+        .featured-box-2-box-2:hover img,
+        .featured-box-2-box-3:hover img {
+            transform: scale(1.1);
+        }
 
-    .featured-box-1 {
-        width: 100%;
-        height: 250px;
-    }
-
-    .featured-box-1 img,
-    .featured-box-3 img {
-        margin-top: -100px;
-    }
-
-    .featured-box-2 {
-        width: 100%;
-        height: 300px;
-        row-gap: 5px;
-    }
-
-    .featured-box-2-box-1,
-    .featured-box-2-box-2,
-    .featured-box-2-box-3 {
-        height: 147.5px;
-    }
-
-    .featured-box-3 {
-        width: 100%;
-        height: 250px;
-    }
 
     .products {
         padding: 30px 5%;
@@ -726,7 +815,7 @@ input {
     }
 
     .posts {
-        /* flex-direction: column; */
+        flex-direction: column; 
         flex-wrap: wrap;
         row-gap: 10px;
     }
@@ -901,7 +990,7 @@ input {
 #copyright {
     margin-bottom: 5px;
 }
- #wishlist-count {
+ /* #wishlist-count {
     position: absolute;
     padding-right: 2px;
     top: opx;
@@ -913,4 +1002,35 @@ input {
     font-size: 11px;
     display: none;
 
- } 
+ }  */
+ #wishlist-count {
+    position: absolute;
+    padding-right: 2px;
+    top: 10px; /* Corrected from opx to 0px */
+    right: 100px;
+    background-color: red;
+    color: white;
+    padding: 2px 6px;
+    border-radius: 50%;
+    font-size: 11px;
+    display: none;
+}
+
+
+.btn-white-wishlist{
+    height:43.6px;
+    background-color: white;
+    border: 1px solid white;
+    color: #1d1d1d;
+    box-shadow: 0 0 3px lightgray;
+    z-index: 20;
+    transition: 0.3s ease;
+}
+.btn-white-wishlist:hover{
+  
+    background-color: black;
+    color:white;
+}
+#heart{
+    color:red;
+}
